--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -15,5 +15,15 @@
 }
 .navbar-light .navbar-brand {
   font-weight: bold;
-  color: #363636;
+  color: #00cc99;
+  transition: all 0.5s;
+  &:hover {
+    color:#00af83;
+  }
+}
+.navbar-light .navbar-nav .nav-link:hover {
+  transition: all 0.5s;
+}
+.navbar-light .navbar-nav .nav-link:hover {
+  color: #00cc99;
 }
