--- a/app/views/chef_profiles/show.html.erb
+++ b/app/views/chef_profiles/show.html.erb
@@ -1,5 +1,16 @@
-<h1>PLACEHOLDER</h1>
-
-<p>Title: <%= @profile.title %></p>
-<p>Description: <%= @profile.description %>
-<p>Category: <%= @profile.category %></p>
+<div class="container">
+  <div class="row justify-content-center">
+    <div class="col-sm-8">
+      <div class="profile-page">
+        <h1>Chef <%= @profile.title %></h1>
+        <div class="category">
+          <p><%= @profile.category %> Cuisine</p>
+        </div>
+        <img src="https://media.istockphoto.com/photos/chef-presenting-a-plate-of-food-picture-id1369920192" alt="">
+        <div class="text-box">
+          <p><%= @profile.description %></p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
