--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -4,14 +4,14 @@
   align-items: center;
   justify-content: center;
   height: 68px;
+  position: absolute;
   padding: 0px 50px;
   color: rgba(0,0,0,0.3);
-  position:absolute;
-  bottom: 0;
     p {
       margin-bottom: 0;
     }
   width: 100%;
+  border-top: 1px solid #edebeb;
   }
 .footer-links {
   display: flex;
