--- a/app/views/chef_profiles/index.html.erb
+++ b/app/views/chef_profiles/index.html.erb
@@ -1,12 +1,20 @@
-<div class="card-trip">
-  <img src="https://static.stacker.com/s3fs-public/styles/sar_screen_maximum_large/s3/croppedshutterstock1659067060GE9Zjpg_28.JPEG" />
-  <div class="card-trip-infos">
-    <div>
-      <h2>Mexican food</h2>
-      <p>The best chef on the aiaiai food!</p>
+<div class="container">
+  <div class="cards">
+    <% @profiles.each do |profile| %>
+      <div class="card-chef">
+      <% link_to chef_profile_path(profile) %>
+        <%# <img src="https://static.stacker.com/s3fs-public/styles/sar_screen_maximum_large/s3/croppedshutterstock1659067060GE9Zjpg_28.JPEG" /> %>
+        <%= image_tag "food.jpg" %>
+        <div class="card-chef-infos">
+          <div>
+            <h2><%= profile.title %></h2>
+            <p><%= profile.description %></p>
+          </div>
+          <h2 class="card-chef-pricing"><%= profile.category %></h2>
+          <%= image_tag "avatarairbnb.jpg",  class: "card-trip-user avatar-bordered" %>
+          <%# <img src="https://avatars.githubusercontent.com/u/101748011?v=4" class="card-trip-user avatar-bordered" /> %>
+        </div>
     </div>
-    <h2 class="card-trip-pricing">£99.99</h2>
-    <img src="https://avatars.githubusercontent.com/u/101748011?v=4" class="card-trip-user avatar-bordered" />
+    <% end %>
   </div>
 </div>
-
