changed some css to booking form

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -6,4 +6,5 @@
 @import "footer";
 @import "search_form";
 @import "booking_notification";
-@import "text_box"
+@import "text_box";
+@import "form";
