--- a/app/assets/stylesheets/components/_text_box.scss
+++ b/app/assets/stylesheets/components/_text_box.scss
@@ -2,8 +2,8 @@
   background-color: white;
   border-radius: 16px;
   padding: 0px;
-  box-shadow: 1px 1px 8px rgba($color: #000000, $alpha: 0.3)
-
+  box-shadow: 1px 1px 8px rgba($color: #000000, $alpha: 0.3);
+  margin: 8px;
 
 }
 
