--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -8,7 +8,7 @@
       <div class="booking-notification">
         <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/skateboard.jpg" />
         <div class="booking-notification-infos">
-          <div>
+          <div class="booking-notification-left">
             <h2> <%= booking.chef_profile.title %> </h2>
             <p><%= booking.chef_profile.description %></p>
             <p>Booked by: <strong><%= booking.user.first_name %> <%= booking.user.last_name %></strong></p>
