--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -19,7 +19,10 @@
           <img class="avatar dropdown-toggle" id="navbarDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" src="https://avatars.githubusercontent.com/u/101748011?v=4" />
           <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
             <%= link_to "Chef you up",  new_chef_profile_path, class: "dropdown-item"%>
+            <%= link_to "My bookings",  bookings_path, class: "dropdown-item"%>
+            <%= link_to "My chef service requests",  my_bookings_path, class: "dropdown-item"%>
             <%= link_to "Sign out", destroy_user_session_path, method: :delete, class: "dropdown-item"  %>
+
           </div>
       <% else %>
         <ul class="navbar-nav me-auto">
