--- a/app/views/chef_profiles/show.html.erb
+++ b/app/views/chef_profiles/show.html.erb
@@ -18,7 +18,8 @@
 
 <div>
   <%= simple_form_for [@profile, @booking] do |f| %>
-  <%= f.input :date %>
+  <!-- <%= f.input :date %> -->
+  <%= f.input :date, collection: (Date.today+1)..(Date.today+90) %>
   <%= f.input :duration %>
   <%= f.button :submit %>
   <% end %>
