--- a/app/views/bookings/my_bookings.html.erb
+++ b/app/views/bookings/my_bookings.html.erb
@@ -5,23 +5,45 @@
         <h1>People booking my chefvices</h1>
       </div>
       <% @my_bookings.each do |booking| %>
-      <div class="booking-notification">
-        <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/skateboard.jpg" />
-        <div class="booking-notification-infos">
-          <div>
-            <h2> <%= booking.chef_profile.title %> </h2>
-            <p><%= booking.chef_profile.description %></p>
-            <p>Booked by: <strong><%= booking.user.first_name %> <%= booking.user.last_name %></strong></p>
-          </div>
-          <div>
-            <p>Status: <strong><%= booking.status.upcase %></strong></p>
-            <p>Booked for: <strong><%= booking.date %></strong></p>
-            <p>Days requested: <strong><%= booking.duration %></strong></p>
-          </div>
-        </div>
-      </div>
+        <% if booking.status == "pending" %>
+          <div class="booking-notification">
+            <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/skateboard.jpg" />
+            <div class="booking-notification-infos">
+                <div>
+                <h2> <%= booking.chef_profile.title %> </h2>
+                <p><%= booking.chef_profile.description %></p>
+                <p>Booked by: <strong><%= booking.user.first_name %> <%= booking.user.last_name %></strong></p>
+                </div>
+              <div>
+                <p>Status: <strong><%= booking.status.upcase %></strong></p>
+                <%= link_to "accept",  booking_accept_path(booking), method: :patch %>
+                <%= link_to "reject",  booking_reject_path(booking), method: :patch %>
+               <p>Booked for: <strong><%= booking.date %></strong></p>
+               <p>Days requested: <strong><%= booking.duration %></strong></p>
+             </div>
+           </div>
+         </div>
+        <% end %>
       <% end %>
-
+    <% @my_bookings.each do |booking| %>
+        <% if booking.status != "pending" %>
+          <div class="booking-notification">
+            <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/skateboard.jpg" />
+            <div class="booking-notification-infos">
+                <div>
+                <h2> <%= booking.chef_profile.title %> </h2>
+                <p><%= booking.chef_profile.description %></p>
+                <p>Booked by: <strong><%= booking.user.first_name %> <%= booking.user.last_name %></strong></p>
+                </div>
+              <div>
+                <p>Status: <strong><%= booking.status.upcase %></strong></p>
+               <p>Booked for: <strong><%= booking.date %></strong></p>
+               <p>Days requested: <strong><%= booking.duration %></strong></p>
+             </div>
+           </div>
+         </div>
+        <% end %>
+      <% end %>
     </div>
   </div>
 </div>
