--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -5,23 +5,26 @@
         <h1>All your bookings</h1>
       </div>
       <% @bookings.each do |booking| %>
-      <div class="booking-notification">
-        <%= image_tag booking.chef_profile.meal_picture_url%>
-        <div class="booking-notification-infos">
-          <div class="booking-notification-left">
-            <h2> <%= booking.chef_profile.title %> </h2>
-            <p><%= booking.chef_profile.description %></p>
-            <p>Booked by: <strong><%= booking.user.first_name %> <%= booking.user.last_name %></strong></p>
-          </div>
-          <div>
-            <p>Status: <strong><%= booking.status.upcase %></strong></p>
-            <p>Booked for: <strong><%= booking.date %></strong></p>
-            <p>Days requested: <strong><%= booking.duration %></strong></p>
+        <div class="booking-notification">
+          <% if @profile.meal_picture_url %>
+            <%= image_tag booking.chef_profile.meal_picture_url%>
+          <% else %>
+            <%= cl_image_tag @profile.photo.key, crop: fill %>
+          <% end %>
+          <div class="booking-notification-infos">
+            <div class="booking-notification-left">
+              <h2> <%= booking.chef_profile.title %> </h2>
+              <p><%= booking.chef_profile.description %></p>
+              <p>Booked by: <strong><%= booking.user.first_name %> <%= booking.user.last_name %></strong></p>
+            </div>
+            <div>
+              <p>Status: <strong><%= booking.status.upcase %></strong></p>
+              <p>Booked for: <strong><%= booking.date %></strong></p>
+              <p>Days requested: <strong><%= booking.duration %></strong></p>
+            </div>
           </div>
         </div>
-      </div>
       <% end %>
-
     </div>
   </div>
 </div>
