--- a/app/views/chef_profiles/new.html.erb
+++ b/app/views/chef_profiles/new.html.erb
@@ -6,6 +6,7 @@
   <%= f.input :title %>
   <%= f.input :description %>
   <%= f.input :category %>
+  <%= f.input :price %>
   <%= f.submit "Submit", class: "btn btn-primary" %>
 <% end %>
 </div>
