--- a/app/views/chef_profiles/show.html.erb
+++ b/app/views/chef_profiles/show.html.erb
@@ -6,9 +6,12 @@
         <div class="category">
           <p><%= @profile.category %> Cuisine</p>
         </div>
-        <%= image_tag @profile.meal_picture_url%>
+        <!--<%= image_tag @profile.meal_picture_url%>-->
         <div class="text-box">
-          <p><%= @profile.description %></p>
+          <ul>
+            <li><b>Description: </b><%= @profile.description %></li>
+            <li><b>Price per day: </b><%= @profile.price %> euros</li>
+          </ul>
         </div>
       </div>
     </div>
@@ -24,7 +27,7 @@
           <%= simple_form_for [@profile, @booking] do |f| %>
           <!-- <%= f.input :date %> -->
           <%= f.input :date, collection: (Date.today+1)..(Date.today+90) %>
-          <%= f.input :duration %>
+          <%= f.input :duration%>
           <%= f.button :submit %>
           <% end %>
         </div>
