--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -8,6 +8,8 @@
   font-size: 20px;
   margin: 0px;
   padding: 16px;
+  color: white;
+  font-weight: 100;
 }
 
 .form-box {
@@ -16,5 +18,20 @@
   padding: 0px;
   box-shadow: 1px 1px 8px rgba($color: #000000, $alpha: 0.3);
   margin: 8px;
+  .form-label {
+    margin-left: 10px;
+  }
+}
+.form-select {
+  width: 75%;
+  margin-left: 10px;
+}
 
+.form-control {
+  width: 75%;
+  margin-left: 10px;
+}
+.col-sm-6 {
+  margin-top: 12px;
+  margin-bottom: 10px;
 }
