--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -16,7 +16,11 @@
 </form>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <% if user_signed_in? %>
+        <% if current_user.avatar.attached? %>
+          <%= cl_image_tag current_user.avatar.key, crop: :fill, id: "navbarDropdown", class: "avatar dropdown-toggle", data_bs_toggle: "dropdown", aria_haspopup: true, aria_expanded: false%>
+        <% else %>
           <img class="avatar dropdown-toggle" id="navbarDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" src="https://avatars.githubusercontent.com/u/101748011?v=4" />
+        <% end %>
           <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
             <%= link_to "My bookings",  bookings_path, class: "dropdown-item"%>
             <% if current_user.chef_profiles.exists? %>
