--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -21,6 +21,7 @@
               <p>Status: <strong><%= booking.status.upcase %></strong></p>
               <p>Booked for: <strong><%= booking.date %></strong></p>
               <p>Days requested: <strong><%= booking.duration %></strong></p>
+              <p>Total price: <strong><%= booking.price %></strong></p>
             </div>
           </div>
         </div>
