--- a/app/views/bookings/my_bookings.html.erb
+++ b/app/views/bookings/my_bookings.html.erb
@@ -24,6 +24,7 @@
                 <%= link_to "reject",  booking_reject_path(booking), method: :patch %>
                <p>Booked for: <strong><%= booking.date %></strong></p>
                <p>Days requested: <strong><%= booking.duration %></strong></p>
+              <p>Total price: <strong><%= booking.total_price %></strong></p>
              </div>
            </div>
          </div>
@@ -47,6 +48,7 @@
                 <p>Status: <strong><%= booking.status.upcase %></strong></p>
                <p>Booked for: <strong><%= booking.date %></strong></p>
                <p>Days requested: <strong><%= booking.duration %></strong></p>
+               <p>Total price: <strong><%= booking.total_price %></strong></p>
              </div>
            </div>
          </div>
