--- a/app/views/chef_profiles/new.html.erb
+++ b/app/views/chef_profiles/new.html.erb
@@ -6,7 +6,7 @@
   <%= f.input :title %>
   <%= f.input :description %>
   <%= f.input :category %>
-  <%= f.input :price %>
+  <%= f.input :price, input_html: { min: '0', step: 'any' }, :hint => 'ex. 100, 70.50', :label => 'Price (in euros)' %>
   <%= f.input :photo, as: :file %>
   <%= f.submit "Submit", class: "btn btn-primary" %>
 <% end %>
