footer, avatar and some css changed

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -29,7 +29,7 @@
                 input_html: { autocomplete: "new-password" } %>
     <%= f.input :avatar, as: :file,
                 required: false,
-                autofocus: false,
+                autofocus: true,
                 input_html: { autocomplete: "avatar" }%> %>
   </div>
 
