--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -4,6 +4,7 @@
   position: sticky;
   top: 0;
   border-bottom: 1px solid #edebeb;
+  padding:10px;
 }
 
 .navbar-lewagon .navbar-collapse {
@@ -27,4 +28,7 @@
 }
 .navbar-light .navbar-nav .nav-link:hover {
   color: #00cc99;
+}
+.dropdown-menu.show {
+  margin-right: 8px;
 }
