changed index card to be clickable and avatar position

--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -15,6 +15,9 @@
   border: white 1px solid;
   height: 40px;
   object-fit: cover;
+  position: absolute;
+  top: -20px;
+  right: 15px;
 }
 .avatar-square {
   width: 40px;
