--- a/app/assets/stylesheets/components/_search_form.scss
+++ b/app/assets/stylesheets/components/_search_form.scss
@@ -16,25 +16,37 @@
   }
 }
 
-.search-form-control .form-control {
-  height: 2.5rem;
-  box-shadow: 0 2px 6px rgba(0,0,0,0.08);
-  border: 1px solid #E7E7E7;
-  border-radius: 20px;
-  width:25rem;
-}
-
-.search-form-control .form-control:focus {
-  border: 1px solid #1EDD88;
-  outline: none !important;
-  box-shadow: 0 2px 6px rgba(0,0,0,0.08);
-}
-
-
 .form-control {
   height: 2.5rem;
   box-shadow: 0 2px 6px rgba(0,0,0,0.08);
   border: 1px solid #E7E7E7;
   border-radius: 20px;
-  width:25rem;
+  padding: 10px;
+  margin-left:0;
+  height:43px;
+}
+.input-wide {
+  width:25rem !important;
+}
+
+.form-control:focus {
+  border: 1px solid #1EDD88;
+  outline: none !important;
+  box-shadow: 0 2px 6px rgba(0,0,0,0.08);
+}
+
+.search {
+  display: flex;
+}
+.search .btn-primary {
+  background-color: #00cc99;
+  color: #f2f2f2;
+  padding: 10px;
+  border: none;
+  margin-left: 7px;
+  transition: all 0.4s;
+  box-shadow: 0 2px 6px rgba(0,0,0,0.08);
+  &:hover {
+    background-color:#00af83;
+  }
 }
