--- a/app/views/chef_profiles/index.html.erb
+++ b/app/views/chef_profiles/index.html.erb
@@ -17,12 +17,14 @@
             <h2 class="card-chef-pricing"><%= profile.category %></h2>
             <% user = User.find(profile.user_id)%>
             <% if user.avatar.attached? %>
-             <%= cl_image_tag user.avatar.key, crop: :fill, class: "card-trip-user avatar-bordered" %>
+              <%= cl_image_tag user.avatar.key, crop: :fill, class: "card-trip-user avatar-bordered" %>
+            <% elsif user.avatar_url %>
+              <%= image_tag user.avatar_url, crop: :fill, class: "card-trip-user avatar-bordered" %>
             <% else %>
-             <%= image_tag "chefcolor.png",  class: "card-trip-user avatar-bordered" %>
+              <%= image_tag "chefcolor.png",  class: "card-trip-user avatar-bordered" %>
             <% end %>
-            <%# <img src="https://avatars.githubusercontent.com/u/101748011?v=4" class="card-trip-user avatar-bordered" /> %>
           </div>
+          <%# <img src="https://avatars.githubusercontent.com/u/101748011?v=4" class="card-trip-user avatar-bordered" /> %>
         </div>
       <% end %>
     <% end %>
