--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -18,6 +18,32 @@
   <%= submit_tag "Search", class: "btn btn-primary" %>
 <% end %>
 </form>
+
+
+
+
+
+
+
+<div>
+  <%= form_tag chef_profiles_path, method: :get do %>
+    <%= text_field_tag :query,
+      params[:query],
+      class: "form-control",
+      id: "range_start",
+      placeholder: "Pick dates"
+    %>
+    <%= submit_tag "Search", class: "btn btn-primary" %>
+    <% end %>
+  </form>
+</div>
+
+
+
+
+
+
+
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <% if user_signed_in? %>
         <% if current_user.avatar.attached? %>
