--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -39,3 +39,29 @@
   margin-left: -55px;
   font-size: 18px;
 }
+// @media (min-width: 500px) and (max-width: 992px) {
+//   .cards {
+//     grid-template-columns: 1fr;
+//   }
+// }
+
+// // // Small devices (landscape phones, 576px and up)
+// @media (max-width: 992px) {
+//   .cards {
+//     grid-template-columns: 1fr 1fr;
+//   }
+// }
+
+// // // Large devices (desktops, 992px and up)
+// @media (min-width: 992px) and (max-width: 1200px) {
+//   .cards {
+//     grid-template-columns: 1fr 1fr 1fr;
+//   }
+// }
+
+// // // Extra large devices (large desktops, 1200px and up)
+// @media (min-width: 1200px) {
+//   .cards {
+//     grid-template-columns: 1fr 1fr 1fr 1fr;
+//   }
+// }
