--- a/app/assets/stylesheets/components/_text_box.scss
+++ b/app/assets/stylesheets/components/_text_box.scss
@@ -1,12 +1,28 @@
 .text-box {
-  background-color: white;
-  border-radius: 16px;
-  padding: 0px;
-  box-shadow: 1px 1px 8px rgba($color: #000000, $alpha: 0.3);
-  margin: 8px;
+  // background-color: white;
+  // border-radius: 16px;
+  // padding: 0px;
+  // box-shadow: 1px 1px 8px rgba($color: #000000, $alpha: 0.3);
+  // margin: 8px;
+  border-bottom: 1px solid #edebeb;
+  border-top: 1px solid #edebeb;
+  padding: 24px;
+  padding-bottom: 10px;
+  margin-top: 14px;
 
 }
 
+.text-box-price {
+  background-color: white;
+  border-radius: 16px;
+  padding: 24px;
+  box-shadow: 1px 1px 8px rgba(0,0,0,0.3);
+  margin: 29px;
+  font-size: 20px;
+  font-weight: bold;
+  width: 153px;
+  text-align: center;
+}
 .text-box p {
   padding: 16px;
   margin: 0px;
