--- a/app/assets/stylesheets/pages/_profile.scss
+++ b/app/assets/stylesheets/pages/_profile.scss
@@ -1,6 +1,7 @@
+
 .profile-page {
   h1 {
-    margin: 16px 0px 0px 0px;
+    margin: 52px 0px 13px 0px;
   }
   .category {
     margin: 0;
@@ -8,12 +9,25 @@
   }
   p {
     margin: 0;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    color: #00af83;
+    font-size: 20px;
   }
 
   img {
-    width: 100%;
+    width:856px;
+    height: 481px;
     border-radius: 16px;
-    margin: 16px 0px;
+    margin: 26px 0px;
     box-shadow: 1px 1px 8px rgba($color: #000000, $alpha: 0.3)
   }
+
+  ul {
+    list-style: none;
+  }
+}
+
+.flex {
+  display: flex;
 }
