--- a/app/views/chef_profiles/show.html.erb
+++ b/app/views/chef_profiles/show.html.erb
@@ -1,30 +1,17 @@
 <div class="container">
-  <div class="row justify-content-center">
-    <div class="col-sm-8">
-      <div class="profile-page">
-        <h1>Chef <%= @profile.title %></h1>
-        <div class="category">
-          <p><%= @profile.category %> Cuisine</p>
-        </div>
-
-        <% if @profile.meal_picture_url %>
-          <%= image_tag @profile.meal_picture_url%>
-        <% else %>
-          <%= cl_image_tag @profile.photo.key, crop: :fill %>
-        <% end %>
-
-        <div class="text-box">
-          <ul>
-            <li><b>Description: </b><%= @profile.description %></li>
-            <li><b>Price per day: </b><%= @profile.price %> euros</li>
-          </ul>
-        </div>
-      </div>
+  <div class="profile-page">
+    <h1><%= @profile.title %></h1>
+    <div class="category">
+      <p><%= @profile.category %></p>
     </div>
-  </div>
-  <% unless @profile.user == current_user %>
-    <div class="row justify-content-center">
-      <div class="col-sm-6">
+    <div class="flex">
+      <% if @profile.meal_picture_url %>
+        <%= image_tag @profile.meal_picture_url, style:"margin-top:0px"%>
+      <% else %>
+        <%= cl_image_tag @profile.photo.key, crop: :fill, style:"margin-top:0px" %>
+      <% end %>
+      <% unless @profile.user == current_user %>
+      <div class="col-4">
         <div class="form-box">
           <div class="small-form">
           <h2>Make a new booking</h2>
@@ -37,6 +24,15 @@
           </div>
         </div>
       </div>
+      <% end %>
     </div>
-  <% end %>
+    <div class="text-box">
+      <ul>
+        <li><%= @profile.description %></li>
+      </ul>
+    </div>
+    <div class="text-box-price">
+        <%= @profile.price %> €/day
+    </div>
+  </div>
 </div>
