--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -20,6 +20,7 @@
   box-shadow: 1px 1px 8px rgba($color: #000000, $alpha: 0.3);
   margin: 15px;
   margin-top: 0px;
+  margin-left: 25px;
   width: 100%;
   .form-label {
     margin-left: 10px;
