--- a/app/assets/stylesheets/components/_text_box.scss
+++ b/app/assets/stylesheets/components/_text_box.scss
@@ -4,12 +4,12 @@
   // padding: 0px;
   // box-shadow: 1px 1px 8px rgba($color: #000000, $alpha: 0.3);
   // margin: 8px;
-  border-bottom: 1px solid #edebeb;
-  border-top: 1px solid #edebeb;
+  border-bottom: 1px solid #8dd8c5;
+  border-top: 1px solid #8dd8c5;
   padding: 24px;
   padding-bottom: 10px;
   margin-top: 14px;
-
+  margin-bottom:20px;
 }
 
 .text-box-price {
@@ -19,9 +19,9 @@
   box-shadow: 1px 1px 8px rgba(0,0,0,0.3);
   margin: 29px;
   font-size: 20px;
-  font-weight: bold;
   width: 153px;
   text-align: center;
+  margin-left: 25px;
 }
 .text-box p {
   padding: 16px;
