--- a/app/assets/stylesheets/pages/_profile.scss
+++ b/app/assets/stylesheets/pages/_profile.scss
@@ -6,21 +6,22 @@
   .category {
     margin: 0;
     font-style: italic;
+    display:flex;
   }
   p {
     margin: 0;
-    margin-top: 10px;
-    margin-bottom: 10px;
+    margin-top: 14px;
+    margin-bottom: 45px;
     color: #00af83;
     font-size: 20px;
   }
-
   img {
     width:856px;
     height: 481px;
     border-radius: 16px;
     margin: 26px 0px;
-    box-shadow: 1px 1px 8px rgba($color: #000000, $alpha: 0.3)
+    box-shadow: 1px 1px 8px rgba($color: #000000, $alpha: 0.3);
+    margin-right: 20px;
   }
 
   ul {
@@ -30,4 +31,24 @@
 
 .flex {
   display: flex;
+}
+#avatar {
+  width: 60px;
+  border-radius: 50%;
+  box-shadow: 0 1px 2px rgba(0,0,0,0.2);
+  border: white 1px solid;
+  height: 60px;
+  margin-top: 0px;
+  margin-left: 14px;
+}
+
+#chef-title {
+  font-size: 20px;
+  font-weight: bold;
+  font-style: italic;
+  margin-bottom: 20px;
+}
+
+.mini-box {
+  display:flex;
 }
