--- a/app/views/chef_profiles/index.html.erb
+++ b/app/views/chef_profiles/index.html.erb
@@ -30,4 +30,7 @@
       <% end %>
     <% end %>
   </div>
+  <% if @profiles.empty? %>
+    <h1 id="no-chef"><%= "No chef for you :(" %></h1>
+  <% end %>
 </div>
