--- a/app/assets/stylesheets/components/_text_box.scss
+++ b/app/assets/stylesheets/components/_text_box.scss
@@ -10,6 +10,7 @@
   padding-bottom: 10px;
   margin-top: 14px;
   margin-bottom:20px;
+  background-color: #fdfcfc;
 }
 
 .text-box-price {
@@ -22,6 +23,7 @@
   width: 153px;
   text-align: center;
   margin-left: 25px;
+  background-color: #fdfcfc;
 }
 .text-box p {
   padding: 16px;
