--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -21,14 +21,12 @@
 
 
 
-
-
-
+<!--THIS IS SEARCH BY DATE -->
 
 <div>
   <%= form_tag chef_profiles_path, method: :get do %>
-    <%= text_field_tag :query,
-      params[:query],
+    <%= text_field_tag :date,
+      params[:date],
       class: "form-control",
       id: "range_start",
       placeholder: "Pick dates"
@@ -39,9 +37,7 @@
 </div>
 
 
-
-
-
+<!--END-->
 
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
