--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,6 +1,6 @@
 .card-chef {
   overflow: hidden;
-  background: white;
+  background: #FDFCFC;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
   width: 100%;
   height: 100%;
@@ -32,6 +32,11 @@
   color: #00cc99 !important;
 }
 
+.card-chef:hover .card-chef-category p {
+  text-decoration:  none;
+  color: #00cc99 !important;
+}
+
 .card-chef .card-chef-infos {
   padding-left: 16px;
   padding-bottom: 52px;
@@ -48,7 +53,6 @@
   right: 16px;
   top: -20px;
   width: 40px;
-  transition: all 0.6s;
 }
 .cards {
   display: grid;
@@ -62,6 +66,55 @@
   position: absolute;
   bottom: 20px;
   right: 25px;
+}
+
+.card-chef-category {
+  position: absolute;
+  bottom: 4px;
+  left: 8px;
+
+  p {
+    font-size: 11px;
+    font-style: italic;
+    color: rgba($color: #000000, $alpha: 0.4);
+    transition: all 0.2s;
+  }
+
+}
+
+.category-cards {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 34px;
+  align-items: top;
+  margin: 23px;
+  text-align: center;
+}
+
+.category-card, .category-card-last {
+  padding: 18px;
+  background-color: #FDFCFC;
+  border-bottom: 1px solid #8DD8C5;
+  border-top: 1px solid #8DD8C5;
+  width: 100%;
+
+  h2 {
+    font-size: 18px;
+    font-weight: bold;
+    margin: 0 0 8px 0;
+  }
+
+  p {
+    font-size: 15px;
+    margin: 0;
+    color: rgba($color: #000000, $alpha: 0.6);
+  }
+}
+
+.category-card-last {
+  margin: 0 auto;
+  text-align: center;
+  width: 50%;
 }
 
 // Smallest device
