--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -21,15 +21,16 @@
   margin: 15px;
   margin-top: 0px;
   margin-left: 25px;
-  width: 100%;
+  width: 95%;
   .form-label {
     margin-left: 10px;
     color: white;
   }
 }
 .form-select {
-  width: 75%;
+  width: 94%;
   margin-left: 10px;
+  margin-right: 10px;
 }
 
 .form-control {
