--- a/app/views/chef_profiles/index.html.erb
+++ b/app/views/chef_profiles/index.html.erb
@@ -1,4 +1,16 @@
 <div class="container">
+  <div>
+    <%= form_tag chef_profiles_path, method: :get do %>
+      <%= text_field_tag :date,
+        params[:date],
+        class: "form-control",
+        id: "range_start",
+        placeholder: "Pick dates"
+      %>
+      <%= submit_tag "Search", class: "btn btn-primary" %>
+    <% end %>
+  </div>
+
   <div class="cards">
     <% @profiles.each do |profile| %>
       <%= link_to chef_profile_path(profile), class:"card-chef" do %>
@@ -33,4 +45,6 @@
   <% if @profiles.empty? %>
     <h1 id="no-chef"><%= "No chef for you :(" %></h1>
   <% end %>
+
+
 </div>
