navbar and some minor changes fixed

--- a/app/views/chef_profiles/show.html.erb
+++ b/app/views/chef_profiles/show.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container container-show">
   <div class="profile-page">
     <h1><%= @profile.title %></h1>
     <div class="category">
