--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -89,6 +89,7 @@
   align-items: top;
   margin: 23px;
   text-align: center;
+  margin-top: 62px;
 }
 
 .category-card, .category-card-last {
@@ -97,7 +98,6 @@
   border-bottom: 1px solid #8DD8C5;
   border-top: 1px solid #8DD8C5;
   width: 100%;
-
   h2 {
     font-size: 18px;
     font-weight: bold;
@@ -115,6 +115,7 @@
   margin: 0 auto;
   text-align: center;
   width: 50%;
+  margin-bottom: 40px;
 }
 
 // Smallest device
