final version needs update

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,14 @@
 // Specific CSS for your home-page
+.btn btn-sucess {
+position: absolute;
+top: 8px;
+bottom: 8px;
+right: 8px;
+font-size: 15px;
+padding:0px;
+color: #00cc99;
+transition: all 0.5s;
+&:hover {
+  color:#00af83;
+}
+};
