--- a/app/views/chef_profiles/index.html.erb
+++ b/app/views/chef_profiles/index.html.erb
@@ -3,11 +3,11 @@
     <%= form_tag chef_profiles_path, method: :get do %>
       <%= text_field_tag :date,
         params[:date],
-        class: "form-control",
+        class: "form-control-2",
         id: "range_start",
         placeholder: "Pick dates"
       %>
-      <%= submit_tag "Search", class: "btn btn-primary" %>
+      <%= submit_tag "Search", class: "btn btn-success" %>
     <% end %>
   </div>
 
