--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -130,6 +130,9 @@
   .cards {
     grid-template-columns: 1fr 1fr;
   }
+  .container {
+    width: 800px;
+  }
 }
 
 // // Large devices (desktops, 992px and up)
