--- a/app/assets/stylesheets/pages/_profile.scss
+++ b/app/assets/stylesheets/pages/_profile.scss
@@ -1,10 +1,8 @@
-
-.container {
-  .container-show {
-    max-width: 800px;
+.container-show {
+    max-width: 700px;
+    margin: 0 auto;
   }
 
-}
 .profile-page {
   h1 {
     margin: 52px 0px 13px 0px;
