--- a/app/assets/stylesheets/components/_booking_notification.scss
+++ b/app/assets/stylesheets/components/_booking_notification.scss
@@ -1,6 +1,15 @@
+.bookings-title {
+  margin-top: 25px;
+  margin-bottom: 35px;
+
+  h1 {
+    margin: 0;
+  }
+}
+
 .booking-notification {
   overflow: hidden;
-  height: 120px;
+  height: 150px;
   background: white;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
   display: flex;
@@ -24,8 +33,8 @@
     font-size: 12px;
     line-height: 1.4;
     opacity: .7;
-    margin-bottom: 0;
-    margin-top: 8px;
+    margin-bottom: 4px;
+    margin-top: 4px;
   }
 }
 
@@ -46,9 +55,31 @@
 }
 
 .booking-notification-left {
-  width: 75%;
+  width: 70%;
   p {
     text-align: justify;
     padding-right: 16px;
   }
+}
+
+.booking-notification-right a {
+  text-decoration: none;
+}
+
+#accept {
+  color: green;
+}
+
+#accept:hover {
+  color: green;
+  font-weight: bolder;
+}
+
+#reject {
+  color: red;
+}
+
+#reject:hover {
+  color: red;
+  font-weight: bolder;
 }
