--- a/app/views/bookings/my_bookings.html.erb
+++ b/app/views/bookings/my_bookings.html.erb
@@ -18,10 +18,10 @@
                 <p><%= booking.chef_profile.description %></p>
                 <p>Booked by: <strong><%= booking.user.first_name %> <%= booking.user.last_name %></strong></p>
                 </div>
-              <div>
+              <div class="booking-notification-right">
                 <p>Status: <strong><%= booking.status.upcase %></strong></p>
-                <%= link_to "accept",  booking_accept_path(booking), method: :patch %>
-                <%= link_to "reject",  booking_reject_path(booking), method: :patch %>
+                <%= link_to "accept",  booking_accept_path(booking), method: :patch, id: "accept"%>
+                <%= link_to "reject",  booking_reject_path(booking), method: :patch, id: "reject" %>
                <p>Booked for: <strong><%= booking.date %></strong></p>
                <p>Days requested: <strong><%= booking.duration %></strong></p>
               <p>Total price: <strong><%= booking.total_price %></strong></p>
