--- a/app/assets/stylesheets/pages/_profile.scss
+++ b/app/assets/stylesheets/pages/_profile.scss
@@ -1,9 +1,7 @@
-
-.container {
-  .container-show {
+.container-show {
     max-width: 800px;
+    margin: 0 auto;
   }
-}
 .profile-page {
   h1 {
     margin: 52px 0px 13px 0px;
