--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -18,9 +18,9 @@
             </div>
             <div>
               <p>Status: <strong><%= booking.status.upcase %></strong></p>
-              <p>Booked for: <strong><%= booking.date %></strong></p>
-              <p>Days requested: <strong><%= booking.duration %></strong></p>
-              <p>Total price: <strong><%= booking.total_price %></strong></p>
+              <p>Start date: <strong><%= booking.date %></strong></p>
+              <p>End date: <strong><%= booking.duration %></strong></p>
+              <p>Total price: <strong><%= '%.2f' % booking.total_price %></strong></p>
             </div>
           </div>
         </div>
@@ -28,3 +28,14 @@
     </div>
   </div>
 </div>
+
+
+
+
+
+<!--THIS IS SEARCH BY DATE -->
+
+
+
+
+<!--END-->
