minor css changes

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,7 +1,7 @@
 // Specific CSS for your home-page
 #dates {
-  background-color: #66e0c2;
-  color: #f2f2f2;
+  background-color: #66E0C2;
+  color: #F2F2F2;
   box-shadow: 0 2px 6px rgba(0,0,0,0.08);
   border-radius: 23px;
   border: none;
@@ -12,7 +12,6 @@
     background-color:#00af83;
   }
 };
-
 .form {
   display: flex;
   margin-top: 30px;
@@ -28,6 +27,6 @@
     border-radius: 20px;
     padding: 10px;
     width: 162px;
-    background-color: #fdfcfc;
+    background-color: #FDFCFC;
   }
 }
