--- a/app/assets/stylesheets/pages/_new.scss
+++ b/app/assets/stylesheets/pages/_new.scss
@@ -15,3 +15,52 @@
   font-weight: lighter;
   opacity: 0.6;
 }
+.create {
+  max-width: 700px;
+  margin: 0 auto;
+  margin-top: 61px;
+}
+#chef-up {
+  background-color: #00cc99;
+  color: #f2f2f2;
+  box-shadow: 0 2px 6px rgba(0,0,0,0.08);
+  border-radius: 23px;
+  border: none;
+  padding: 19px;
+  margin-left: 7px;
+  transition: all 0.5s;
+  margin-top: 10px;
+  &:hover {
+    background-color:#00af83;
+  }
+}
+
+#log-in {
+  background-color: #00cc99;
+  color: #f2f2f2;
+  box-shadow: 0 2px 6px rgba(0,0,0,0.08);
+  border-radius: 23px;
+  border: none;
+  padding: 19px;
+  margin-left: 7px;
+  transition: all 0.5s;
+  margin-top: 10px;
+  &:hover {
+    background-color:#00af83;
+  }
+}
+
+#sign-up {
+  background-color: #00cc99;
+  color: #f2f2f2;
+  box-shadow: 0 2px 6px rgba(0,0,0,0.08);
+  border-radius: 23px;
+  border: none;
+  padding: 19px;
+  margin-left: 7px;
+  transition: all 0.5s;
+  margin-top: 10px;
+  &:hover {
+    background-color:#00af83;
+  }
+}
